# celery_learning

./: README.md  pyproject.toml
src/celery_learning/: celery_app.py  main.py
src/celery_learning/config/: celery_config.py
src/celery_learning/workers/: tasks.py
